--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -28,11 +32,367 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+nav ul li  {
+  list-style-type: none;
+  font-size: 15px;
+  cursor: pointer;
+  height: 20px;
+  margin: 0 39px;
+}
+
+nav {
+ height: 68px;
+   position: fixed;
+    width: 100%;
+    overflow: hidden;
+    top:0;
+    
+ background-color:#f4f2f2 ;
+}
+
+
+nav ul {
+  display:  flex;
+  justify-content: space-around;
+  max-width: 900px;
+  margin: auto;
+  padding: 20px;
+  
+}
+
+
+nav ul li a {
+  text-decoration: none;
+  font-size: 20px;
+  color:black;
+  
+}
+
+img {
+  max-width: 400px;
+  border-radius: 100%;
+  background: -webkit-linear-gradient(135deg, rgb(0, 255, 164), rgb(166, 104, 255));
+  box-shadow: 0px 0px 11px 10px rgb(209, 204, 196);
+}
+
+.App {
+ min-height: 100vh;
+ margin-top: 68px;
+}
+
+main {
+  max-width: 900px;
+  margin: auto;
+  min-height: calc(100vh - 175px);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+.info {
+  margin-left: 30px;
+}
+
+#profile-name {
+background: #29CFC9;
+background: linear-gradient(to top left, #29CFC9 31%, #2792CF 100%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+ }
+
+
+ .profile-moving {
+  animation-name: wave;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  transform-origin: 70% 70%;
+  display: inline-block;
+}
+
+
+@keyframes wave {
+  0% { transform: rotate( 0.0deg) }
+  10% { transform: rotate(14.0deg) }
+  20% { transform: rotate(-8.0deg) }
+  30% { transform: rotate(14.0deg) }
+  40% { transform: rotate(-4.0deg) }
+  50% { transform: rotate(10.0deg) }
+  60% { transform: rotate( 0.0deg) }
+  100% { transform: rotate( 0.0deg) }
+}
+
+
+.info ul li {
+  list-style-type: none;
+  position: relative;
+  padding: 10px;
+}
+
+.info ul {
+  padding: 10px;
+  display: block;
+  cursor:default;
+}
+
+ .info ul li:hover{
+ 
+  top:-2px;
+  background-color: #aaa6a6;
+  color: black;
+  border-radius: 10px;
+  transition: .5s ease;
+}
+
+
+#info-icons {
+ color: black;
+ opacity: 1;
+}
+
+#info-text  {
+ position: relative;
+ top: -7px;
+ margin-left: 13px;
+}
+
+.media-ref ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#light{
+  background-color:#f4f2f2 ;
+  transition: .2s ease;
+}
+#dark {
+  background-color:#332e2e ;
+  transition: .2s ease;
+}
+
+#dark nav {
+   background:#3a3939 ;
+}
+
+#dark nav ul li  a {
+  color: white;
+}
+#dark .info ul li {
+  color: white;
+}
+#dark .info h3 {
+  color: white;
+}
+#dark .info h1 {
+  color: white;
+}
+#dark #info-icons {
+  color: white;
+}
+#dark footer p {
+  color: white;
+}
+
+h1 {
+  font-size: 40px;
+  text-align: left;
+}
+h3 {
+  font-size: 30px;
+}
+
+
+.border-bottom:hover {
+  border-bottom: 6px solid rgb(16,208,186);
+  position: relative;
+  top: -3px;
+  padding-bottom: 6px;
+  
+}
+nav ul Link {
+  text-decoration: none;
+}
+
+.js-center {
+  font-size: 40px;
+  position: relative;
+  top: -16px;
+}
+
+.js-center:hover {
+  top: -23px;
+  transition: .3s ease;
+}
+
+
+.border-green {
+  border-bottom: 6px solid black;
+}
+
+
+/* about */
+
+.about-me {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 900px;
+  margin: auto;
+  font-size: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  flex-direction: column;
+   min-height: calc(100vh - 175px);
+}
+
+.sec-1 {
+  border-radius: 10px;
+  background-color: rgb(39, 36, 47);
+  width: 900px;
+  box-shadow: 0px 0px 10px 2px rgb(209 204 196);
+  margin-top:50px;
+  margin-bottom: 30px;
+}
+
+.fa-circle ul  {
+  display: flex;
+  padding: 10px;
+  
+}
+
+.fa-circle {
+  background-color: rgb(140, 140, 140);
+  border-radius: 8px 8px 0 0;
+}
+
+.fa-circle ul li {
+  list-style-type: none;
+  padding-left: 4px;
+}
+
+
+.sec-1-child {
+  padding: 40px;
+  max-width: 100%;
+}
+
+.sec-1-child p {
+  margin: 20px 0;
+}
+
+
+.span-green {
+  color:rgb(103, 231, 171)
+}
+
+.span-rgb-green {
+  color: rgb(138, 240, 138);
+}
+
+
+.sec-1-child ul {
+  column-count: 2;
+  
+}
+.sec-1-child .hobbies {
+  column-count: 1;
+  
+}
+
+.sec-1-child ul li {
+  list-style-type: none;
+  line-height: 1.75;
+}
+
+.sec-1-child p, .sec-1-child  li {
+  margin: 1rem 0;
+}
+
+.hobbies-icons {
+  padding-right: 10px;
+  padding-top:4px ;
+  margin-right: 5px;
+  position: relative ;
+  top: 3px;
+}
+
+ .sec-1-child ul li:hover {
+ position: relative;
+ top:-3px;
+}
+.hobbies li:hover {
+  position: relative;
+ top:-3px;
+}
+
+/* footer */
+
+footer {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ height: 30px;
+ padding: 50px 0;
+ flex-direction: column;
+ gap: 2px;
+ font-family: Roboto,Helvetica,sans-serif;
+}
+
+
+
+
+@media (max-width:937px) {
+  main {
+    flex-direction: column;
+    gap: 10px;
   }
-  to {
-    transform: rotate(360deg);
+  .info {
+    margin-left: 0;
+    margin-top: 20px;
+    max-width: 300px;
+  }
+  
+  .img-div {
+    margin-top: 50px;
+  }
+  img{
+    height: auto;
+    width: 70%;
+    display: block;
+    margin: auto;
+  }
+  nav ul li  {
+    margin:0 11px;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+  #switch {
+    color:yellow;
+  }
+  h1,h3 {
+    text-align: center;
+  }
+  h1 {
+    font-size: 25px;
+  }
+  h3{
+    font-size:20px;
+  }
+
+  .sec-1 {
+    max-width: 80%;
+    
+  }
+  .sec-1-child {
+    padding: 25px;
+  }
+
+  .sec-1 {
+    max-width: 80%;
+  }
+
+  .sec-1-child ul {
+    column-count: 1;
   }
 }
