--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -41,4 +41,96 @@ nav ul li a {
   top: -23px;
   transition: 0.3s ease;
   border-bottom: 6px solid rgb(16, 208, 186);
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  text-align: center;
+  gap: 20px;
+  max-width: 1700px;
+  margin: auto;
+}
+
+.projects img {
+  max-width: 100%;
+  height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
+  box-shadow: 0px 0px 10px 5px rgb(209, 204, 196);
+  border-radius: 20px;
+  margin-top: 50px;
+}
+
+.projects h2 {
+  font-size: 35px;
+  margin: 30px 0;
+  font-weight: 400;
+}
+
+.projects a {
+  padding-top: 4px;
+}
+
+.projects button {
+  cursor: pointer;
+}
+
+.live-demo {
+  font-size: 20px;
+  border-radius: 40px;
+  padding: 5px 15px;
+  border-color: black;
+}
+
+.link-wrap {
+  display: flex;
+  gap: 6px;
+}
+
+.source-code {
+  margin-top: 10px;
+  font-size: 20px;
+  border-radius: 40px;
+  padding: 5px 15px;
+}
+
+.projects button:hover {
+  color: rgb(207, 203, 197);
+  transition: 0.4s ease;
+}
+
+#dark .projects button:hover {
+  color: rgb(207, 203, 197);
+  transition: 0.4s ease;
+}
+
+#dark .live-demo {
+  color: white;
+  background: none;
+}
+
+#dark .source-code {
+  color: white;
+  background: none;
+}
+
+#dark .projects h2 {
+  color: white;
+}
+
+@media (max-width: 600px) {
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .projects img {
+    width: 90%;
+    height: auto;
+  }
+}
+@media (max-width: 1700px) {
+  .projects {
+    width: 95%;
+  }
 }/*# sourceMappingURL=main.css.map */
