update all codes

--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -1,2 +1,6 @@
+@import "./mixins/media-queries";
+
 @import "./page_layout/home";
+@import "./page_layout/about";
 @import "./page_layout/porfolio";
+@import "./page_layout/footer"
