--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -1,3 +1,27 @@
+main {
+  max-width: 900px;
+  margin: auto;
+  min-height: calc(100vh - 175px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 937px) {
+  main {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+
+nav {
+  height: 68px;
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
+  top: 0;
+  background-color: #f4f2f2;
+}
+
 nav ul li {
   list-style-type: none;
   font-size: 15px;
@@ -12,6 +36,10 @@ nav ul {
   margin: auto;
   padding: 20px;
   text-align: center;
+}
+
+nav ul Link {
+  text-decoration: none;
 }
 
 nav ul li a {
@@ -43,6 +71,293 @@ nav ul li a {
   border-bottom: 6px solid rgb(16, 208, 186);
 }
 
+.border-green {
+  border-bottom: 6px solid black;
+}
+
+@media (max-width: 937px) {
+  .img-div {
+    margin-top: 50px;
+  }
+}
+
+.profile {
+  max-width: 400px;
+  border-radius: 100%;
+  background: -webkit-linear-gradient(135deg, rgb(0, 255, 164), rgb(166, 104, 255));
+  box-shadow: 0px 0px 11px 10px rgb(209, 204, 196);
+}
+@media (max-width: 937px) {
+  .profile {
+    height: auto;
+    width: 70%;
+    display: block;
+    margin: auto;
+  }
+}
+
+#profile-name {
+  background: #29CFC9;
+  background: linear-gradient(to top left, #29CFC9 31%, #2792CF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.wave {
+  animation-name: wave;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  transform-origin: 70% 70%;
+  display: inline-block;
+}
+
+@keyframes wave {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  }
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+.info {
+  margin-left: 30px;
+}
+@media (max-width: 937px) {
+  .info {
+    margin-left: 0;
+    margin-top: 20px;
+    max-width: 300px;
+  }
+}
+
+.info ul li {
+  list-style-type: none;
+  position: relative;
+  padding: 10px;
+}
+
+.info ul {
+  padding: 10px;
+  display: block;
+  cursor: default;
+}
+
+.info ul li:hover {
+  top: -2px;
+  background-color: #aaa6a6;
+  color: black;
+  border-radius: 10px;
+  transition: 0.5s ease;
+}
+
+#info-icons {
+  color: black;
+  opacity: 1;
+}
+
+#info-text {
+  position: relative;
+  top: -7px;
+  margin-left: 13px;
+}
+
+.media-ref ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.media-ref ul li a {
+  color: black;
+}
+
+#light {
+  background-color: #f4f2f2;
+  transition: 0.2s ease;
+}
+
+#dark {
+  background-color: #332e2e;
+  transition: 0.2s ease;
+}
+
+#dark nav {
+  background: #3a3939;
+}
+
+#dark nav ul li a {
+  color: white;
+}
+
+#dark .info ul li {
+  color: white;
+}
+
+#dark .info h3 {
+  color: white;
+}
+
+#dark .info h1 {
+  color: white;
+}
+
+#dark #info-icons {
+  color: white;
+}
+
+#dark #visit-link {
+  color: white;
+}
+
+#dark footer p {
+  color: white;
+}
+
+h1 {
+  font-size: 40px;
+  text-align: left;
+}
+@media (max-width: 937px) {
+  h1 {
+    font-size: 30px;
+    text-align: center;
+  }
+}
+
+h3 {
+  font-size: 30px;
+}
+@media (max-width: 937px) {
+  h3 {
+    font-size: 20px;
+    text-align: left;
+  }
+}
+
+.about-me {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 900px;
+  margin: auto;
+  font-size: 20px;
+  font-family: "Courier New", Courier, monospace;
+  color: white;
+  flex-direction: column;
+  min-height: calc(100vh - 175px);
+}
+
+.sec-1 {
+  border-radius: 10px;
+  background-color: rgb(39, 36, 47);
+  width: 900px;
+  box-shadow: 0px 0px 10px 2px rgb(209, 204, 196);
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+@media (max-width: 937px) {
+  .sec-1 {
+    max-width: 90%;
+  }
+}
+
+.fa-circle ul {
+  display: flex;
+  padding: 10px;
+}
+
+.fa-circle {
+  background-color: rgb(140, 140, 140);
+  border-radius: 8px 8px 0 0;
+}
+
+.fa-circle ul li {
+  list-style-type: none;
+  padding-left: 4px;
+}
+
+.sec-1-child {
+  padding: 40px;
+  max-width: 100%;
+}
+@media (max-width: 937px) {
+  .sec-1-child {
+    padding: 25px;
+  }
+}
+
+.sec-1-child p {
+  margin: 20px 0;
+}
+
+.span-green {
+  color: rgb(103, 231, 171);
+}
+
+.span-rgb-green {
+  color: rgb(138, 240, 138);
+}
+
+.sec-1-child ul {
+  -moz-column-count: 2;
+       column-count: 2;
+}
+@media (max-width: 937px) {
+  .sec-1-child ul {
+    -moz-column-count: 1;
+         column-count: 1;
+  }
+}
+
+.sec-1-child .hobbies {
+  -moz-column-count: 1;
+       column-count: 1;
+}
+
+.sec-1-child ul li {
+  list-style-type: none;
+  line-height: 1.75;
+}
+
+.sec-1-child p, .sec-1-child li {
+  margin: 1rem 0;
+}
+
+.hobbies-icons {
+  padding-right: 10px;
+  padding-top: 4px;
+  margin-right: 5px;
+  position: relative;
+  top: 3px;
+}
+
+.sec-1-child ul li:hover {
+  position: relative;
+  top: -3px;
+}
+
+.hobbies li:hover {
+  position: relative;
+  top: -3px;
+}
+
 .projects {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -50,6 +365,17 @@ nav ul li a {
   gap: 20px;
   max-width: 1700px;
   margin: auto;
+}
+@media (max-width: 767px) {
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+@media (max-width: 1700px) {
+  .projects {
+    width: 95%;
+  }
 }
 
 .projects img {
@@ -61,6 +387,12 @@ nav ul li a {
   border-radius: 20px;
   margin-top: 50px;
 }
+@media (max-width: 767px) {
+  .projects img {
+    width: 90%;
+    height: auto;
+  }
+}
 
 .projects h2 {
   font-size: 35px;
@@ -70,6 +402,8 @@ nav ul li a {
 
 .projects a {
   padding-top: 4px;
+  text-decoration: none;
+  color: black;
 }
 
 .projects button {
@@ -100,6 +434,21 @@ nav ul li a {
   transition: 0.4s ease;
 }
 
+.link-wrap a:hover {
+  color: rgb(207, 203, 197);
+  transition: 0.4s ease;
+}
+
+#dark .link-wrap a {
+  color: white;
+  transition: 0.4s ease;
+}
+
+#dark .link-wrap a:hover {
+  color: rgb(207, 203, 197);
+  transition: 0.4s ease;
+}
+
 #dark .projects button:hover {
   color: rgb(207, 203, 197);
   transition: 0.4s ease;
@@ -119,18 +468,13 @@ nav ul li a {
   color: white;
 }
 
-@media (max-width: 600px) {
-  .projects {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-  }
-  .projects img {
-    width: 90%;
-    height: auto;
-  }
-}
-@media (max-width: 1700px) {
-  .projects {
-    width: 95%;
-  }
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  padding: 50px 0;
+  flex-direction: column;
+  gap: 2px;
+  font-family: Roboto, Helvetica, sans-serif;
 }/*# sourceMappingURL=main.css.map */
