--- a/src/Styles/page_layout/_home.scss
+++ b/src/Styles/page_layout/_home.scss
@@ -1,3 +1,26 @@
+
+main {
+  max-width: 900px;
+  margin: auto;
+  min-height: calc(100vh - 175px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include for-lg-desktop {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+
+nav {
+  height: 68px;
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
+  top:0;
+  background-color:#f4f2f2 ;
+}
+
 nav ul li  {
   list-style-type: none;
   font-size: 15px;
@@ -13,6 +36,10 @@ nav ul {
   margin: auto;
   padding: 20px;
   text-align: center;
+}
+
+nav ul Link {
+  text-decoration: none;
 }
 
 nav ul li a {
@@ -44,3 +71,161 @@ nav ul li a {
   transition: .3s ease;
   border-bottom: 6px solid rgb(16,208,186);
 }
+
+
+.border-green {
+  border-bottom: 6px solid black;
+}
+
+
+.img-div {
+  @include for-lg-desktop {
+    margin-top: 50px;
+  }
+}
+
+.profile {
+  max-width: 400px;
+  border-radius: 100%;
+  background: -webkit-linear-gradient(135deg, rgb(0, 255, 164), rgb(166, 104, 255));
+  box-shadow: 0px 0px 11px 10px rgb(209, 204, 196);
+  @include for-lg-desktop {
+    height: auto;
+    width: 70%;
+    display: block;
+    margin: auto;
+  }
+}
+
+#profile-name {
+  background: #29CFC9;
+  background: linear-gradient(to top left, #29CFC9 31%, #2792CF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+.wave{
+  animation-name: wave;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  transform-origin: 70% 70%;
+  display: inline-block;
+}
+
+@keyframes wave {
+  0% { transform: rotate( 0.0deg) }
+  10% { transform: rotate(14.0deg) }
+  20% { transform: rotate(-8.0deg) }
+  30% { transform: rotate(14.0deg) }
+  40% { transform: rotate(-4.0deg) }
+  50% { transform: rotate(10.0deg) }
+  60% { transform: rotate( 0.0deg) }
+  100% { transform: rotate( 0.0deg) }
+}
+
+.info {
+  margin-left: 30px;
+  @include for-lg-desktop {
+    margin-left: 0;
+    margin-top: 20px;
+    max-width: 300px;
+  }
+}
+
+.info ul li {
+  list-style-type: none;
+  position: relative;
+  padding: 10px;
+}
+
+.info ul {
+  padding: 10px;
+  display: block;
+  cursor:default;
+}
+
+.info ul li:hover{
+  top:-2px;
+  background-color: #aaa6a6;
+  color: black;
+  border-radius: 10px;
+  transition: .5s ease;
+}
+
+#info-icons {
+  color: black;
+  opacity: 1;
+}
+
+#info-text  {
+  position: relative;
+  top: -7px;
+  margin-left: 13px;
+}
+
+.media-ref ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.media-ref ul li a {
+  color: black;
+}
+
+#light{
+  background-color:#f4f2f2 ;
+  transition: .2s ease;
+}
+#dark {
+  background-color:#332e2e ;
+  transition: .2s ease;
+}
+
+#dark nav {
+    background:#3a3939 ;
+}
+
+#dark nav ul li  a {
+  color: white;
+}
+#dark .info ul li {
+  color: white;
+}
+#dark .info h3 {
+  color: white;
+}
+#dark .info h1 {
+  color: white;
+}
+#dark #info-icons {
+  color: white;
+}
+
+#dark #visit-link{
+  color: white;
+}
+
+#dark footer p {
+  color: white;
+}
+
+h1 {
+  font-size: 40px;
+  text-align: left;
+  @include for-lg-desktop {
+    font-size: 30px;
+    text-align: center;
+  }
+}
+
+h3 {
+  font-size: 30px;
+    @include for-lg-desktop {
+    font-size: 20px;
+    text-align: left;
+  }
+}
+
+
+
