update all codes

--- a/src/Styles/page_layout/_home.scss
+++ b/src/Styles/page_layout/_home.scss
@@ -100,7 +100,7 @@ nav ul li a {
 #profile-name {
   background: #29CFC9;
   background: linear-gradient(to top left, #29CFC9 31%, #2792CF 100%);
-  -webkit-background-clip: text;
+  // -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
