--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -47,6 +47,11 @@ nav ul li a {
   font-size: 20px;
   color: black;
 }
+@media (max-width: 462px) {
+  nav ul li a {
+    font-size: 15px;
+  }
+}
 
 .menu-hover:hover {
   border-bottom: 6px solid rgb(16, 208, 186);
