--- a/src/Styles/page_layout/_home.scss
+++ b/src/Styles/page_layout/_home.scss
@@ -46,6 +46,9 @@ nav ul li a {
   text-decoration: none;
   font-size: 20px;
   color:black;
+  @include for-sm-phone {
+    font-size: 15px;
+  }
   
 }
 
